parser/src/snapshots/parser__parser__tests__parse_invalid_number.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
---
Err(
    ExpectedTokenError {
        expected: [
            Number,
        ],
        actual: Illegal(
            Some(
                Number(
                    ParseFloatError,
                ),
            ),
        ),
        invalid_row: 3,
        invalid_col: 16,
    },
)
