parser/src/snapshots/parser__parser__tests__parse_invalid_utf8.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBrace,
        ],
        actual: Illegal(
            None,
        ),
        invalid_row: 3,
        invalid_col: 17,
    },
)
