parser/src/snapshots/parser__parser__tests__parse_valid_decimal.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
---
Ok(
    Array(
        [
            Number(
                -65619720000000.62,
            ),
            Number(
                0.29,
            ),
        ],
    ),
)
